--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
 .shelves {
 
     text-align: center;
-    border: 30px solid rgb(181,96,53);
+    border: 3vw solid rgb(181,96,53);
     outline: 4px solid black;
 }
 
