--- a/styles-popup.css
+++ b/styles-popup.css
@@ -40,13 +40,13 @@
     border: none;
     outline: none;
     font-family: sans-serif;
-    font-size: 30pt;
+    font-size: 20pt;
     cursor: pointer;
-    color: rgb(255, 255, 255);
+    color: whitesmoke;
     background-color: chocolate;
     text-align: center;
     width: 100%;
-    height: 10%;
+    height: 6%;
     margin-top: 0%;
 }
 
