--- a/styles-popup.css
+++ b/styles-popup.css
@@ -40,7 +40,7 @@
     border: none;
     outline: none;
     font-family: sans-serif;
-    font-size: 20pt;
+    font-size: 2vw;
     cursor: pointer;
     color: whitesmoke;
     background-color: chocolate;
@@ -48,6 +48,7 @@
     width: 100%;
     height: 6%;
     margin-top: 0%;
+    white-space: nowrap;
 }
 
 .arrows {
