--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,13 @@ body {
     font-size: 40pt;
 }
 .shelf {
-    min-height: 20vh;
-    background: rgb(92, 52, 28);
+    min-height: 10vh;
+    height: 30vh;
+    background-image: url(books.png);
+    background-size: cover;
     border: 15px solid  rgb(179, 109, 56);
     outline: 4px solid black;
+    position: relative;
    
 }
 
@@ -27,20 +30,22 @@ body {
     outline: 4px solid black;
 }
 
-.shelf a {
-    height: 80%;
-    width: 80vw;
-    text-transform: capitalize;
-    text-decoration: none;
+.shelf-button {
     all: unset;
     cursor: pointer;
-}
-.shelf button {
     width: 100%;
-    height: 8vw;
-    all: unset;
-    cursor: pointer;
-} /* 
+    height: 100%;
+} 
+
+.shelf-a {
+    width: 100%;
+    height: 100%;
+}
+
+
+/* 
+
+
 .shelf-button {
        OLMUYOR , KİTAPLARIN AŞAĞI DEĞMESİ LAZIM
     position: relative;
@@ -54,9 +59,14 @@ body {
     font-weight: bold;
     font-size: xx-large;
 }
-
-.shelf * img {
-   max-width: 100%;
+.book-label {
+    color: aliceblue;
+    font-family: serif;
+    font-weight: bolder;
+    font-size: 10vw;
+    width: 80%;
+    margin-left: 10%;
+    background-color: rgba(0, 0, 0, .80)
 }
 
 
