--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ body {
     border: 15px solid  rgb(179, 109, 56);
     outline: 4px solid black;
     position: relative;
+    text-align: center;
+    justify-content: center;
    
 }
 
@@ -64,8 +66,9 @@ body {
     font-family: serif;
     font-weight: bolder;
     font-size: 10vw;
-    width: 80%;
-    margin-left: 10%;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
     background-color: rgba(0, 0, 0, .80)
 }
 
