--- a/yazilar/styles_read.css
+++ b/yazilar/styles_read.css
@@ -32,7 +32,8 @@ body {
 }
 
 .title {
-    color:black;
+    color:red;
+    text-decoration: underline;
     font-family: serif;
     font-size: 30pt;
 }
