--- a/yazilar/styles_read.css
+++ b/yazilar/styles_read.css
@@ -32,10 +32,13 @@ body {
 }
 
 .title {
-    color:red;
+    color:white;
     text-decoration: underline;
     font-family: serif;
     font-size: 30pt;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 p {
     text-align: center;
@@ -55,4 +58,93 @@ h3 {
 
 span {
     font-style: italic;
+}
+
+#contact-form {
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 6px;
+    box-shadow: 0 0 30px rgba(0,0,0,1);
+    background-color: rgb(179, 109, 56);
+    justify-content: center;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom:auto;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5%;
+}
+
+#email-form {
+    margin: 5%;
+    width: 100%;
+    font-size: 18px;
+    text-align: center;
+    font-style: normal;
+    border-radius: 5px;
+    width: 100%;
+    border-width: 1px 1px 3px;
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
+    margin-bottom: 10px;
+}
+
+#text-form {
+    width: 100%;
+    font-style: normal;
+    border-radius: 5px;
+    width: 100%;
+    border-width: 1px 1px 1px;
+    box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
+}
+
+#submit-form {
+    
+    width: 30%;
+    background-color: bisque;
+   }
+   
+
+.question-container {
+    width: 94%;
+    margin-left: 0;
+    border-radius: 6px;
+    box-shadow: 0 0 30px rgba(0,0,0,1);
+    margin-top: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.question-container h2 {
+    margin-top: 0;
+    font-family: sans-serif;
+}
+
+.question-container button {
+    box-shadow: none;
+    margin-top: 0%;
+    width: 100%;
+    padding: 3%;
+    font-size: xx-large;
+    font-family: sans-serif;
+    background-color: rgb(142, 247, 126)
+}
+.question {
+    min-height: 20%;
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: left;
+    padding: 3%;
+}
+
+.first {
+    background-color: rgb(184, 123, 49);
+}
+
+.secondary {
+    background-color: rgb(215, 158, 73)
 }
