--- a/yazilar/styles_read.css
+++ b/yazilar/styles_read.css
@@ -35,7 +35,7 @@ body {
     color:white;
     text-decoration: underline;
     font-family: serif;
-    font-size: 30pt;
+    font-size: 5vw;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
